<resources>
    <string name="app_name">Light</string>
    <string name="action_settings">Settings</string>
    <string name="menu_arabic">Arabic</string>
    <string name="menu_french">French</string>
    <string name="menu_spanish">Spanish</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="learn">LEARN</string>
    <string name="learnWithIcon">{faw-question-circle}\nLEARN</string>
    <string name="title_activity_read">READ</string>
    <string name="title_activity_learn">LEARN</string>
    <string name="title_activity_ask">CONNECT</string>
    <string name="title_activity_loginOrSignup">LOGIN OR SIGNUP</string>
    <string name="read">READ</string>
    <string name="readWithIcon">{faw-book}\nREAD</string>
    <string name="connect">CONNECT</string>
    <string name="connectWithIcon">{faw-comments}\nCONNECT</string>
    <string name="angle_left">{faw-angle-left}</string>
    <string name="th_list">{faw-th-list}</string>
    <string name="angle_right">{faw-angle-right}</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="learn_title">LEARN</string>
    <string name="connect_title">CONNECT</string>

    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="message_elipses">Message&#8230;</string>

    <string name="auth0_client_id">qrQYkbhyQTnJJHMfDGF0Yhz04DcKbFKW</string>
    <string name="auth0_domain">light-app.eu.auth0.com</string>
    <string name="prompt_username_or_email">USERNAME: </string>
    <string name="prompt_password">PASSWORD: </string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="error_field_required">Field Required</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_incorrect_password">Incorrect password</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_verify_password">VERIFY PASSWORD</string>
</resources>
