<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity"
    android:background="#aaaaaa">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#2d91aa">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/learn"
            android:id="@+id/learnButton"
            android:layout_weight="0.33"
            android:background="#14b9d6"
            android:textColor="#ffffff" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/read"
            android:id="@+id/readButton"
            android:layout_weight="0.33"
            android:background="#f27935"
            android:textColor="#ffffff"/>



        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/connect"
            android:id="@+id/askButton"
            android:layout_weight="0.33"
            android:background="#1fbba6"
            android:textColor="#ffffff" />
    </LinearLayout>
</RelativeLayout>
