<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/signup_form">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#878787"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            android:text="@string/prompt_username_or_email" />
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:gravity="center"
            android:theme="@style/LoginFormContainer"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#878787"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            android:text="@string/prompt_password" />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/sign_up"
            android:padding="15dp"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:gravity="center"
            android:theme="@style/LoginFormContainer"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#878787"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            android:text="@string/prompt_verify_password" />
        <EditText
            android:id="@+id/password_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeActionId="@+id/sign_up"
            android:imeActionLabel="@string/sign_up"
            android:padding="15dp"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:gravity="center"
            android:theme="@style/LoginFormContainer"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/sign_up"
            android:textSize="18sp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>

</LinearLayout>