<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bigndesign.light.ReadActivity"
    tools:showIn="@layout/activity_read"
    android:background="@android:color/darker_gray"
    android:padding="0dp">

    <WebView
        android:id="@+id/readView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:padding="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="?attr/actionBarSize">


    </WebView>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="bottom"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@android:color/darker_gray"
        android:layout_height="50dp">


        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/angle_left"
            android:id="@+id/previousButton"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:background="@android:color/transparent"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/th_list"
            android:id="@+id/menuButton"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:textSize="20sp"
            android:textColor="@android:color/black" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/angle_right"
            android:id="@+id/nextButton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />
    </RelativeLayout>


</RelativeLayout>
